# family-tree

./: .gitignore  CLAUDE.md  README.md  TODO.md  config.toml  pyproject.toml
examples/: config.toml  sample.csv
src/family_tree/: animator.py  config.py  csv_parser.py  flow_animator.py  frame_drawer.py  graph_builder.py  layout_engine.py  main.py  models.py  renderer.py
tests/: test_animator.py  test_config.py  test_csv_parser.py  test_flow_animator.py  test_frame_drawer.py  test_graph_builder.py  test_renderer.py
todo/: TODO_03.md  TODO_04.md  TODO_05.md  TODO_06.md  TODO_07.md  TODO_08.md  TODO_09.md
